# do-not-enter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  chainboot-rpi3.img  chainboot-rpi4.img  config.txt  kernel8.img  mb-demo.rs  rust-toolchain.toml  update-leg.sh  update.sh
.cargo/: config.toml
chainboot/: minipush.rb  miniterm.rb
clib/framebuffer/: CMakeLists.txt
clib/framebuffer/include/: framebuffer.h
clib/framebuffer/src/: framebuffer.c
clib/stdlib/: CMakeLists.txt
clib/stdlib/include/: stdlib.h
clib/stdlib/src/: stdlib.c
docker/: Dockerfile  Makefile
extras/chainboot/minipush/: progressbar_patch.rb
extras/docker/: Dockerfile  Gemfile
extras/testing/: dispatch.rb
framebuffer/: fb.c  io.h  kernel.c  mb.c  mb.h  terminal.h
framebuffer/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/include/: bindings.h  complex.h  impl.h
kernel/src/: colorize.rs  cpu.rs  driver.rs  font.rs  framebuffer.rs  kernel.rs  lib.rs  panic.rs  print.rs
kernel/src/_arch/aarch64/: exception.rs  exception.s  time.rs
kernel/src/_arch/aarch64/exception/: asynchronous.rs
kernel/src/_arch/aarch64/memory/mmu/: translation_table.rs
kernel/src/bsp/: Attributions.txt
kernel/src/bsp/device_driver/bcm/: bcm2xxx_pl011_uart.rs
kernel/src/bsp/raspberrypi/: memory.rs
kernel/src/exception/: asynchronous.rs
kernel/src/framebuffer/: fb_init.h  mailbox.c  mailbox.rs
kernel/src/memory/: alloc.rs  mmio.rs  mmu.rs
kernel/tests/: 00_console_sanity.rb  00_console_sanity.rs  boot_test_string.rb  panic_exit_success.rs
kernel/tests/panic_wait_forever/: mod.rs
lib/dne-macros/: Cargo.toml
lib/dne-macros/src/: lib.rs
lib/framebuffer/: Cargo.toml
lib/ruspiro-cache/: Cargo.toml
lib/ruspiro-mailbox/: Cargo.toml
lib/test-macros/: Cargo.toml
libraries/display/: Cargo.toml
libraries/dne-macros/: Cargo.toml
libraries/proc_macros/: Cargo.toml
libraries/proc_macros/src/: getset.rs  lib.rs
libraries/ruspiro-cache/: Cargo.toml  aarch64-ruspiro.json  build.rs
libraries/ruspiro-cache/src/: lib.rs
libraries/ruspiro-mailbox/: Cargo.toml
libraries/ruspiro-mailbox/src/: interface.rs
libraries/ruspiro-mailbox/src/propertytags/: macros.rs
libraries/test-macros/: Cargo.toml
libraries/test-types/: Cargo.toml
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proc-macros/tests/: mod.rs
proc_macros/src/: lib.rs
ruspiro-cache/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  aarch64-ruspiro.json
ruspiro-cache/src/: dcache.rs  lib.rs
ruspiro-mailbox/: Cargo.toml
ruspiro-mailbox/src/: interface.rs  lib.rs
src/: alloc.rs  bsp.rs  colorize.rs  console.rs  cpu.rs  exception.rs  font.rs  framebuffer.rs  kernel.rs  lib.rs  libkernel.rs  mail.rs  main.rs  memory.rs  panic.rs  panic_wait.rs  print.rs  sync.rs  time.rs  vga.rs
src/_arch/: Attributions.txt
src/_arch/aarch64/: exception.rs  time.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/_arch/aarch64/memory/: mmu.rs
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  kernel.ld  memory.rs
src/bsp/raspberrypi/memory/: mmio.rs  mmu.rs
src/io/: io.c  io.h
src/memory/: alloc.rs  mmio.rs  mmu.rs
src/memory/mmu/: translation_table.rs
src/str/: colorize.rs  mod.rs
src/vga/: buffer.rs
