[package]
name = "do-not-enter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[lib]
name = "libkernel"
test = true

[[bin]]
name = "kernel"
path = "src/kernel.rs"
test = false

[dependencies]
aligned = "0.4.1"
cfg-if = "1.0.0"
cortex-a = "7.4.0"
dne-macros = { git = "https://github.com/jewlexx/dne-macros.git", version = "0.1.0" }
linked_list_allocator = "0.10.1"
spin = "0.9.4"
tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"] }