[package]
name = "do-not-enter"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ruspiro-mailbox", "ruspiro-cache"]

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["ruspiro-mailbox/ruspiro_pi3"]
bsp_rpi4 = ["ruspiro-mailbox/ruspiro_pi4"]

[lib]
name = "libkernel"
test = false

[[bin]]
name = "kernel"
path = "src/kernel.rs"
test = false

[dependencies]
aligned = "0.4.1"
cfg-if = "1.0.0"
cortex-a = "7.4.0"
dne-macros = { git = "https://github.com/jewlexx/dne-macros.git", version = "0.1.0" }
linked_list_allocator = "0.10.1"
ruspiro-error = "0.1.1"
ruspiro-mailbox = { version = "0.4.1", path = "ruspiro-mailbox" }
spin = "0.9.4"
tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"] }

[patch.crates-io]
ruspiro-mmio-register = { git = "https://github.com/RusPiRo/ruspiro-mmio-register.git", branch = "development" }
ruspiro-arch-aarch64 = { git = "https://github.com/RusPiRo/ruspiro-arch-aarch64.git", branch = "development" }
ruspiro-error = { git = "https://github.com/RusPiRo/ruspiro-error.git", branch = "development" }
ruspiro-cache = { path = "ruspiro-cache" }
