[workspace]
members = ["lib/*", "kernel"]

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
lto = true

[patch.crates-io]
ruspiro-mmio-register = { git = "https://github.com/RusPiRo/ruspiro-mmio-register.git", branch = "development" }
ruspiro-arch-aarch64 = { git = "https://github.com/RusPiRo/ruspiro-arch-aarch64.git", branch = "development" }
ruspiro-error = { git = "https://github.com/RusPiRo/ruspiro-error.git", branch = "development" }
ruspiro-cache = { path = "lib/ruspiro-cache" }
ruspiro-mailbox = { path = "lib/ruspiro-mailbox" }
