[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
default = []
bsp_rpi3 = ["ruspiro-mailbox/ruspiro_pi3"]
bsp_rpi4 = ["ruspiro-mailbox/ruspiro_pi4"]

[lib]
name = "libkernel"
test = false

[[bin]]
name = "kernel"
path = "src/kernel.rs"
test = false

[dependencies]
aligned = "0.4.1"
cfg-if = "1.0.0"
cortex-a = "7.4.0"
linked_list_allocator = "0.10.1"
proc_macros = { version = "0.1.0", path = "../libraries/proc_macros" }
ruspiro-error = "0.1.1"
ruspiro-mailbox = { version = "0.4.1", path = "../libraries/ruspiro-mailbox" }
spin = "0.9.4"
tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"] }
