[package]
name = "ruspiro-mailbox"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.1" # remember to update html_root_url
description = "Raspberry Pi mailbox property tag interface API."
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-mailbox/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-mailbox/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "mailbox", "propertytag", "raspberrypi", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
paste = "1.0.12"
ruspiro-mmio-register = "0.1.3"
ruspiro-cache = "0.4.1"
ruspiro-error = "0.1.1"

[features]
ruspiro_pi3 = []
ruspiro_pi4 = []
